--- a/app/views/staff/shared/activities/_activity.html.haml
+++ b/app/views/staff/shared/activities/_activity.html.haml
@@ -255,6 +255,15 @@
       - if policy(activity_presenter).update? && step_is_complete_or_next?(activity: activity_presenter, step: :gdi)
         = a11y_action_link(t("default.link.#{activity_presenter.call_to_action(:gdi)}"), activity_step_path(activity_presenter, :gdi), t("summary.label.activity.gdi"))
 
+  .govuk-summary-list__row.gcrf_challenge_area
+    %dt.govuk-summary-list__key
+      = t("summary.label.activity.gcrf_challenge_area")
+    %dd.govuk-summary-list__value
+      = activity_presenter.gcrf_challenge_area
+    %dd.govuk-summary-list__actions
+      - if policy(activity_presenter).update? && step_is_complete_or_next?(activity: activity_presenter, step: :gcrf_challenge_area)
+        = a11y_action_link(t("default.link.#{activity_presenter.call_to_action(:gcrf_challenge_area)}"), activity_step_path(activity_presenter, :gcrf_challenge_area), t("summary.label.activity.gcrf_challenge_area"))
+
   - unless activity_presenter.fund?
     .govuk-summary-list__row.collaboration_type
       %dt.govuk-summary-list__key
