Simplify the "forecasts" table
The table of forecasts under the "financials" section for an activity
currently lists this set of columns:

- start date
- end date
- currency
- value
- providing organisation
- receiving organisation

We want to simplify this so that it just shows the financial quarter
(rather than start and end dates) and the amount, plus an 'Edit' action.

--- a/app/views/staff/shared/planned_disbursements/_table.html.haml
+++ b/app/views/staff/shared/planned_disbursements/_table.html.haml
@@ -3,28 +3,16 @@
     %thead.govuk-table__head
       %tr.govuk-table__row
         %th.govuk-table__header
-          =t("table.header.planned_disbursement.period_start_date")
-        %th.govuk-table__header
-          =t("table.header.planned_disbursement.period_end_date")
-        %th.govuk-table__header
-          =t("table.header.planned_disbursement.currency")
+          =t("table.header.planned_disbursement.financial_quarter")
         %th.govuk-table__header
           =t("table.header.planned_disbursement.value")
         %th.govuk-table__header
-          =t("table.header.planned_disbursement.providing_organisation")
-        %th.govuk-table__header
-          =t("table.header.planned_disbursement.receiving_organisation")
-          %th.govuk-table__header
 
     %tbody.govuk-table__body
       - planned_disbursements.each do |planned_disbursement|
         %tr.govuk-table__row{id: planned_disbursement.id}
-          %td.govuk-table__cell= planned_disbursement.period_start_date
-          %td.govuk-table__cell= planned_disbursement.period_end_date
-          %td.govuk-table__cell= planned_disbursement.currency
+          %td.govuk-table__cell= planned_disbursement.financial_quarter_and_year
           %td.govuk-table__cell= planned_disbursement.value
-          %td.govuk-table__cell= planned_disbursement.providing_organisation_name
-          %td.govuk-table__cell= planned_disbursement.receiving_organisation_name
           %td.govuk-table__cell
             - if policy(planned_disbursement).edit?
               = a11y_action_link(t('default.link.edit'),
