`country_delivery_partners` added to activity form
The new field Country delivery partners is now in the activity form. This field
is only applicable for Newton funded activities, and only mandatory for
programmes (level B). Optional on levels C and D, and not required (not to be
present) for Funds (model validation on next commit).

Due to the nature of the UI design for this field, we have customised the UI
elements we use to collect the data, instead of using the FormBuilder. The
elements available on FormBuilder would not give us the functionality we were
looking for.

During the development of this piece of work we also spotted an error where
activity fields, despite not complying with validation rules, were displaying
a success message. The error came from the `update_form_state` method on the
activity form controller. This is now fixed.

We also got some failing tests with a Capybara:InfiniteRedirect error. This was
due to fund activities skipping several steps on the activity form. The limit
for Capybara was set on 5. This is by default. When I added
`country_delivery_partners` to the form, since this step is also skipped on funds
we got this error, as this step was the 6th step we were skipping. We have solved
this issue by increasing the limit of redirects Capybara will accept, but it
would be worth looking at this again when we have the time and maybe use
other methods available for Wicked Wizard on the controller, like `jump_to`
instead of `skip_step`.

--- a/app/views/staff/shared/activities/_activity.html.haml
+++ b/app/views/staff/shared/activities/_activity.html.haml
@@ -157,6 +157,20 @@
         - if policy(activity_presenter).update? && step_is_complete_or_next?(activity: activity_presenter, step: :programme_status)
           = a11y_action_link(t("default.link.#{activity_presenter.call_to_action(:programme_status)}"), activity_step_path(activity_presenter, :programme_status), t("summary.label.activity.programme_status"))
 
+  - if activity_presenter.is_newton_funded?
+    .govuk-summary-list__row.country_delivery_partners
+      %dt.govuk-summary-list__key
+        = t("summary.label.activity.country_delivery_partners")
+      %dd.govuk-summary-list__value
+        - if activity_presenter.country_delivery_partners.present?
+          %ul.govuk-list
+            - activity_presenter.country_delivery_partners.each do |cdp|
+              %li
+                = cdp
+      %dd.govuk-summary-list__actions
+        - if policy(activity_presenter).update? && step_is_complete_or_next?(activity: activity_presenter, step: :country_delivery_partners)
+          = a11y_action_link(t("default.link.#{activity_presenter.call_to_action(:country_delivery_partners)}"), activity_step_path(activity_presenter, :country_delivery_partners), t("summary.label.activity.country_delivery_partners"))
+
   .govuk-summary-list__row.planned_start_date
     %dt.govuk-summary-list__key
       = t("summary.label.activity.planned_start_date")
