Modify the backend of `oda_eligibility` options
After modifying the yaml file that contains the different options for ODA
eligibility, now we need to modify the helper that makes those options appear
on the form.

--- a/app/views/staff/activity_forms/oda_eligibility.html.haml
+++ b/app/views/staff/activity_forms/oda_eligibility.html.haml
@@ -1,8 +1,8 @@
 = render layout: "wrapper" do |f|
   = f.hidden_field :oda_eligibility, value: nil
   = f.govuk_collection_radio_buttons :oda_eligibility,
-    yaml_to_objects_with_description(entity: "activity", type: "oda_eligibility"),
-    :code,
-    :name,
+    oda_eligibility_radio_options,
+    :value,
+    :label,
     :description,
     legend: { tag: 'h1', size: 'xl', text: t("form.legend.activity.oda_eligibility") }
