Activity calculates the IATI status from programme status
The `status` field, used to store the IATI status code, is always calculated from the `programme_status` field, and never set explicitly via the interface. It is only needed when exporting data for IATI publishing.

As it is a derived value, we don't need to persist it to the database, so we can simplify our schema.

For clarity, the new method is named `iati_status` rather than `status`.

--- a/app/views/staff/shared/xml/_activity.xml.haml
+++ b/app/views/staff/shared/xml/_activity.xml.haml
@@ -24,7 +24,7 @@
         %narrative= organisation.name
   - if activity.previous_identifier?
     %other-identifier{"ref" => activity.transparency_identifier, type: "A1"}
-  %activity-status{"code" => activity.status}/
+  %activity-status{"code" => activity.iati_status}/
   %activity-date{"iso-date" => activity.planned_start_date, type: "1"}/
   - if activity.actual_start_date?
     %activity-date{"iso-date" => activity.actual_start_date, type: "2"}/
