--- a/app/views/staff/users/_form.html.haml
+++ b/app/views/staff/users/_form.html.haml
@@ -2,7 +2,7 @@
   = f.govuk_error_summary
 
   = f.govuk_text_field :name
-  = f.govuk_email_field :email
+  = f.govuk_email_field :email, disabled: (action_name == "edit")
   = f.govuk_collection_radio_buttons :role,
       list_of_user_roles,
       :id,
