--- a/app/views/staff/transactions/_form.html.haml
+++ b/app/views/staff/transactions/_form.html.haml
@@ -16,3 +16,7 @@
   = f.govuk_text_field :receiving_organisation_reference
 
 = f.govuk_submit t("default.button.submit")
+
+- if action_name == "new"
+  = link_to t("form.link.activity.back"), organisation_activity_path(@activity.organisation, @activity), class: "govuk-button govuk-button--secondary", "data-module": "govuk-button", role: "button"
+
