--- a/app/views/staff/transactions/_form.html.haml
+++ b/app/views/staff/transactions/_form.html.haml
@@ -19,4 +19,5 @@
 
 - if action_name == "new"
   = link_to t("form.link.activity.back"), organisation_activity_path(@activity.organisation, @activity), class: "govuk-button govuk-button--secondary", "data-module": "govuk-button", role: "button"
-
+- if action_name == "edit"
+  = link_to t("default.button.delete"), activity_transaction_path(@activity, @transaction), method: "delete" , class: "govuk-button govuk-button--warning", "data-module": "govuk-button", role: "button", data: { confirm: "Are you sure you want to delete this transaction?" }
