Separate BEIS from other orgs on user admin page
When a user wants to add a new user, they have to select what organisation this
user belongs to. There is a radio button list for this, with organisations
sorted alphabetically. However, there was no distinction between BEIS and the
Delivery Partners on this list. BEIS appeared in the middle of the list, which
made easier for users to accidentally assign a new user to BEIS when they don't
belong to this organisation. This would give that user higher privileges than
they should have. To avoid this, we have now separated BEIS org from the rest of
organisations on display, adding a divider in the radio button list.

--- a/app/views/staff/users/_form.html.haml
+++ b/app/views/staff/users/_form.html.haml
@@ -9,12 +9,13 @@
       :name,
       legend: { tag: :h2 }
 
-  - if @organisations.any?
-    = f.govuk_collection_radio_buttons :organisation_id,
-        @organisations,
-        :id,
-        :name,
-        legend: { tag: :h2 }
+  - if @service_owner.present?
+    = f.govuk_radio_buttons_fieldset :organisation_id, classes: "user-organisations" do
+      = f.govuk_radio_button :organisation_id, @service_owner.id, label: { text: @service_owner.name }, link_errors: true
+      - if @delivery_partners.any?
+        = f.govuk_radio_divider
+        - @delivery_partners.each do |dp|
+          = f.govuk_radio_button :organisation_id, dp.id, label: { text: dp.name }
   - else
     .govuk-inset-text
       = succeed "." do
