Add a Codelist model
This adds a Codelist model which loads all codelists into memory on the first
initialization in production. It dev, all codelists are loaded on demand, which makes
it easier to make changes on the fly.

The presence of this model also increases the visibilty of codelists across the
application, making it easier for us to use them in things like controllers and
models, as they're not just scoped to a helper.

--- a/app/views/staff/implementing_organisations/edit.html.haml
+++ b/app/views/staff/implementing_organisations/edit.html.haml
@@ -11,7 +11,7 @@
         = f.hidden_field :activity_id, value: @activity.id
         = f.govuk_text_field :name
         = f.govuk_collection_select :organisation_type,
-                     yaml_to_objects(entity: "organisation", type: "organisation_type"),
+                     organisation_type_options,
                      :code,
                      :name
         = f.govuk_text_field :reference
