--- a/app/views/staff/reports/budgets.html.haml
+++ b/app/views/staff/reports/budgets.html.haml
@@ -6,6 +6,9 @@
       %h1.govuk-heading-xl
         = t("page_title.report.show", report_description: @report_presenter.description, report_financial_quarter: @report_presenter.financial_quarter_and_year)
 
+    - if policy(@report_presenter).download?
+      = render partial: "staff/reports/download", locals: { report_presenter: @report_presenter }
+
   = render partial: "staff/reports/actions", locals: { report_presenter: @report_presenter }
 
   .govuk-grid-row
