--- a/app/views/staff/reports_state/submit/confirm.html.haml
+++ b/app/views/staff/reports_state/submit/confirm.html.haml
@@ -19,6 +19,11 @@
         %li
           You will be the contact for any freedom of information requests about this data once it has been published
 
+      %p.govuk-body
+        = succeed "." do
+          This report should only be submitted by a
+          %a{href: ""} Submitting Officer
+
       = form_for @report_presenter, url: report_state_path(@report_presenter) do |f|
         = hidden_field_tag :state, "submitted"
         = f.govuk_submit t("action.report.submit.confirm.button")
