Fixing BEIS filter view
As a BEIS user, you can filter activities for each delivery partner. When we
introduced the two tabs view for activities, we had to make a small tweak on the
way the filter displays the information. Now, when a BEIS user filters
activities for a DP, they will see first the tab in which they are when they
decided to filter the activities. That way, they will be able to see both
Current and Historic activities.

There is test coverage for this feature in this commit.

--- a/app/views/staff/shared/activities/_filter.html.haml
+++ b/app/views/staff/shared/activities/_filter.html.haml
@@ -2,7 +2,7 @@
   .govuk-grid-column-full
     %h2.govuk-heading-s
       = t("filters.activity.title")
-    = form_with url: activities_path, method: :get do |f|
+    = form_with method: :get do |f|
       .govuk-form-group
         %label{ class: "govuk-label", for: :organistaion_id }
           = t("filters.activity.organisation")
