Show activities grouped by parent project
We were showing the delivery partner identifier before. This is now replaced with the RODA identifier.

Third-party projects are shown grouped under their parent project, and only their identifier fragment is needed for display.

Co-authored-by: jcoglan <james.coglan@dxw.com>

--- a/app/views/staff/shared/reports/_table_variance.html.haml
+++ b/app/views/staff/shared/reports/_table_variance.html.haml
@@ -17,7 +17,11 @@
   %tbody.govuk-table__body
     - activities.each do |activity|
       %tr.govuk-table__row{id: activity.id}
-        %td.govuk-table__cell= activity.delivery_partner_identifier
+        - if activity.project?
+          %td.govuk-table__cell= activity.roda_identifier
+        - else
+          %td.govuk-table__cell.level-d= activity.roda_identifier_fragment
+
         %td.govuk-table__cell= activity.forecasted_total_for_report_financial_quarter(report: @report)
         %td.govuk-table__cell= activity.actual_total_for_report_financial_quarter(report: @report)
         %td.govuk-table__cell= activity.variance_for_report_financial_quarter(report: @report)
