--- a/app/views/staff/budgets/_form.html.haml
+++ b/app/views/staff/budgets/_form.html.haml
@@ -17,6 +17,13 @@
   :name,
   legend: { tag: :h2 }
 
+= f.govuk_collection_select :financial_year,
+  list_of_financial_years,
+  :id,
+  :name,
+  options: { selected: f.object.financial_year, prompt: t("form.prompt.budget.financial_year") },
+  label: { size: "m", tag: "h2" }
+
 = f.govuk_date_field :period_start_date,
   legend: { size: "s" }
 
