--- a/app/views/staff/activity_forms/_wrapper.html.haml
+++ b/app/views/staff/activity_forms/_wrapper.html.haml
@@ -9,3 +9,9 @@
         = yield f
 
         = f.govuk_submit t("form.button.activity.submit")
+
+      %p.govuk-body
+        Please refer to the
+        %a{href: "https://beisodahelp.zendesk.com/hc/en-gb/articles/360058280774-RODA-Data-Dictionary-includes-field-labels-definitions-and-reporting-requirements"}
+          data dictionary
+        if you're unsure what information to enter above.
