Give Financial quarter a quarter of table width
The design called for the table header “Financial quarter” to not wrap at average screen sizes.

We chose to give it a guaranteed quarter of the table width, so it can still be flexible at smaller screen sizes, but have the words stick together most times.

Co-authored-by: jcoglan <james.coglan@dxw.com>

--- a/app/views/staff/shared/reports/_table_approved.html.haml
+++ b/app/views/staff/shared/reports/_table_approved.html.haml
@@ -6,7 +6,7 @@
       = t("page_content.reports.title")
     %thead.govuk-table__head
       %tr.govuk-table__row
-        %th.govuk-table__header
+        %th{class: "govuk-table__header govuk-!-width-one-quarter"}
           = t("table.header.report.financial_quarter")
         - if current_user.service_owner?
           %th.govuk-table__header
