Use 'high_voltage' gem for static pages
We were previously using separate controllers for these, which seemed
unnecessary. Also, fixed several typos in the cookie statement page.

I've also removed/combined several tests related to static pages.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -67,11 +67,11 @@
               Support links
             %ul.govuk-footer__inline-list
               %li.govuk-footer__inline-list-item
-                = link_to t("footer.link.privacy_policy"), privacy_policy_path, class: "govuk-footer__link"
+                = link_to t("footer.link.privacy_policy"), page_path("privacy_policy"), class: "govuk-footer__link"
               %li.govuk-footer__inline-list-item
-                = link_to t("footer.link.cookie_statement"), cookie_statement_path, class: "govuk-footer__link"
+                = link_to t("footer.link.cookie_statement"), page_path("cookie_statement"), class: "govuk-footer__link"
               %li.govuk-footer__inline-list-item
-                = link_to t("footer.link.accessibility_statement"), accessibility_statement_path, class: "govuk-footer__link"
+                = link_to t("footer.link.accessibility_statement"), page_path("accessibility_statement"), class: "govuk-footer__link"
               %li.govuk-footer__inline-list-item
                 = link_to t("footer.link.support_site"), "https://beisodahelp.zendesk.com/", class: "govuk-footer__link"
 
