--- a/app/views/pages/privacy_policy.html.haml
+++ b/app/views/pages/privacy_policy.html.haml
@@ -7,7 +7,7 @@
         = t("page_title.privacy_policy")
 
       %p.govuk-body
-        Report Official Development Assistance (RODA)  is provided by the Department for Business, Energy & Industrial Strategy (BEIS).
+        Report Official Development Assistance (RODA)  is provided by the Department for Business, Energy &amp; Industrial Strategy (BEIS).
 
       %p.govuk-body
         BEIS is the data controller for the service.
