--- a/app/views/staff/reports/index.html.haml
+++ b/app/views/staff/reports/index.html.haml
@@ -6,6 +6,10 @@
       %h1.govuk-heading-xl
         = t("page_title.report.index")
 
+  - if current_user.service_owner?
+    .govuk-grid-column-full.page-actions
+      = link_to t("action.report.download.reports"), reports_path(format: :csv), class: "govuk-button govuk-button--secondary govuk-!-margin-left-4"
+
   .govuk-grid-row.activity-page
     .govuk-grid-column-full
       %h2.govuk-heading-m
