--- a/app/views/staff/activity_uploads/new.html.haml
+++ b/app/views/staff/activity_uploads/new.html.haml
@@ -6,6 +6,6 @@
 
   .govuk-grid-row
     .govuk-grid-column-full.page-actions
-      = link_to t("action.activity.download.button"), report_activity_upload_path(@report_presenter, format: :csv), class: "govuk-button govuk-button--secondary govuk-!-margin-left-4"
+      = link_to t("action.activity.download.button"), upload_activity_upload_path(format: :csv), class: "govuk-button govuk-button--secondary govuk-!-margin-left-4"
 
   = render partial: "upload_form"
