Show programmes grouped by fund on organisation show page
Allow users to see a list of programmes an organisation is extending
from the organisation's show page (which is also the first page delivery
partners will see when signing into RODA).

The next step will allow users to create a child activity from this
page.

--- a/app/views/staff/organisations/show.html.haml
+++ b/app/views/staff/organisations/show.html.haml
@@ -50,6 +50,9 @@
           = t("page_content.organisation.download.third-party-projects.explanation")
         = link_to t("default.button.download_as_xml"), organisation_path(@organisation_presenter, format: :xml, level: :third_party_project), class: "govuk-button"
 
+  - unless @organisation_presenter.service_owner?
+    = render partial: "grouped_programmes", locals: { grouped_programmes: @grouped_programmes }
+
   .govuk-grid-row
     .govuk-grid-column-two-thirds
       %h2.govuk-heading-m
