--- a/app/views/staff/planned_disbursement_uploads/update.html.haml
+++ b/app/views/staff/planned_disbursement_uploads/update.html.haml
@@ -1,3 +1,5 @@
+= content_for :page_title_prefix, t("page_title.planned_disbursement.upload")
+
 %main.govuk-main-wrapper#main-content{ role: "main" }
   .govuk-grid-row
     .govuk-grid-column-two-thirds
