Recovering from error during transaction upload
The design called for different guiding text on the error page.

The CSV download is less emphasised.

--- a/app/views/staff/transaction_uploads/update.html.haml
+++ b/app/views/staff/transaction_uploads/update.html.haml
@@ -11,4 +11,5 @@
       .govuk-grid-column-full
         = render partial: "error_table"
 
-  = render partial: "upload_form"
+  - unless @success
+    = render partial: "upload_form"
