Create programmes through parent fund rather than source_fund
After some consideration, I decided it would be better if new child
activities were created through a consistent URL, rather than treating
funds differently.

This should also prevent some very confusing problems with testing,
because it was very easy to call `authenticate!` before the fund
activities were initialised. Now we're looping over the fund activities,
rather than `Fund.all` (which always exists, as it is loaded from a
codelist file), we won't render the 'Add fund to...' links during the
sign-in phase, causing a failure, but they will exist when we actually
want to test them!

If we choose to treat funds as a distinct entity in the future, it
should be straightforward enough to split this out into its own
controller.

--- a/app/views/staff/organisations/show.html.haml
+++ b/app/views/staff/organisations/show.html.haml
@@ -14,12 +14,12 @@
         %h2.govuk-heading-m
           = t("create_programme", scope: "page_content.organisation")
 
-        - @source_funds.each do |source|
-          = link_to t("form.button.activity.new_with_source_fund", name: source.name),
-            organisation_source_fund_children_path(@organisation_presenter, source.id),
+        - @funds.each do |fund|
+          = link_to t("form.button.activity.new_child", name: fund.title),
+            organisation_activity_children_path(@organisation_presenter, fund.id),
             method: :post, class: "govuk-button govuk-!-margin-right-4"
 
-  - if policy(@organisation_presenter).download? && @funds.any?
+  - if policy(@organisation_presenter).download? && @organisation_funds.any?
     .govuk-grid-row
       .govuk-grid-column-full.download-projects
         %h2.govuk-heading-m
@@ -27,7 +27,7 @@
         %div.govuk-body
           = t("page_content.organisation.download.programmes.explanation")
 
-        - @funds.each do |fund|
+        - @organisation_funds.each do |fund|
           = link_to t("page_content.organisation.download.programmes.button", fund_title: fund.title),
               organisation_path(@organisation_presenter, format: :xml, level: :programme, fund_id: fund.id),
               class: "govuk-button"
