Adding a link to Terms of Service in the footer
We are now publishing the Terms of the Service on RODA. The link will live in the
footer, along with the Privacy policy, Cookie statement, Accessibility statement
and Support

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -73,6 +73,8 @@
               %li.govuk-footer__inline-list-item
                 = link_to t("footer.link.accessibility_statement"), page_path("accessibility_statement"), class: "govuk-footer__link"
               %li.govuk-footer__inline-list-item
+                = link_to t("footer.link.terms_of_service"), page_path("terms_of_service"), class: "govuk-footer__link"
+              %li.govuk-footer__inline-list-item
                 = link_to t("footer.link.support_site"), "https://beisodahelp.zendesk.com/", class: "govuk-footer__link"
 
             %svg.govuk-footer__licence-logo{focusable: "false", height: "17", role: "presentation", viewbox: "0 0 483.2 195.7", width: "41", xmlns: "http://www.w3.org/2000/svg"}
