--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
     - if current_user.present?
       = render partial: 'shared/google_tag_manager_service_owner', locals: { user_type: current_user.service_owner? ? "service_owner" : "non_service_owner" }
     = render partial: 'shared/google_tag_manager_head'
+    = render partial: 'shared/no_index' if ENV["ROBOT_NOINDEX"] == "true"
     %meta{charset: "utf-8"}/
     %title #{content_for :page_title_prefix} — #{t('app.title')}
     %meta{content: "width=device-width, initial-scale=1", name: "viewport"}/
