--- a/app/views/staff/shared/activities/_tab_nav.html.haml
+++ b/app/views/staff/shared/activities/_tab_nav.html.haml
@@ -2,19 +2,7 @@
   = t("tabs.activity.title")
 
 %ul.govuk-tabs__list
-  %li.govuk-tabs__list-item
-    = link_to t("tabs.activity.financials"),
-      organisation_activity_financials_path(@activity.organisation, @activity),
-      { class: "govuk-tabs__tab", role: "tab", aria: { controls: "financials", selected: true } }
-  %li.govuk-tabs__list-item
-    = link_to t("tabs.activity.details"),
-      organisation_activity_details_path(@activity.organisation, @activity),
-      { class: "govuk-tabs__tab", role: "tab", aria: { controls: "details", selected: true } }
-  %li.govuk-tabs__list-item.govuk-tabs__list-item--selected
-    = link_to t("tabs.activity.children"),
-      organisation_activity_children_path(@activity.organisation, @activity),
-      { class: "govuk-tabs__tab", role: "tab", aria: { controls: "children", selected: false } }
-  %li.govuk-tabs__list-item
-    = link_to t("tabs.activity.comments"),
-      organisation_activity_comments_path(@activity.organisation, @activity),
-      { class: "govuk-tabs__tab", role: "tab", aria: { controls: "comments", selected: false } }
+  = render partial: "staff/shared/activities/tab_nav_item", locals: { tab: "financials", path: organisation_activity_financials_path(@activity.organisation, @activity) }
+  = render partial: "staff/shared/activities/tab_nav_item", locals: { tab: "details", path: organisation_activity_details_path(@activity.organisation, @activity) }
+  = render partial: "staff/shared/activities/tab_nav_item", locals: { tab: "children", path: organisation_activity_children_path(@activity.organisation, @activity) }
+  = render partial: "staff/shared/activities/tab_nav_item", locals: { tab: "comments", path: organisation_activity_comments_path(@activity.organisation, @activity) }
