Allow transfers to be edited
This adds an endpoint for BEIS users to edit a transfer. It follows the same flow as
adding a new transfer - a user fills out the form, they're asked to confirm, and then
a confirmation message is shown as a flash after redirecting.

--- a/app/views/staff/transfers/confirm.html.haml
+++ b/app/views/staff/transfers/confirm.html.haml
@@ -29,7 +29,7 @@
             %td.govuk-table__cell
               = @transfer_presenter.value
 
-      = form_with model: @transfer, url: activity_transfers_path(@source_activity) do |f|
+      = form_with model: @transfer, url: @confirmation_url do |f|
         = f.hidden_field :confirm, value: 1
         = f.hidden_field :destination, value: @transfer.destination.roda_identifier
         = f.hidden_field :financial_quarter
