--- a/app/views/staff/activity_financials/show.html.haml
+++ b/app/views/staff/activity_financials/show.html.haml
@@ -36,7 +36,7 @@
       - if current_user.organisation.service_owner?
         .govuk-grid-row
           .govuk-grid-column-full
-            .panel
+            .panel#transfers
               %h2.govuk-heading-l
                 = t("page_title.transfer.index")
 
@@ -44,3 +44,27 @@
                 Transfer funds to another delivery partner activity
 
               = link_to "Transfer fund", new_activity_transfer_path(@activity), class: "govuk-button"
+
+              - if @transfers.count > 0
+                %table.govuk-table
+                  %thead.govuk-table__head
+                    %tr.govuk-table__row
+                      %th.govuk-table__header{scope: "col"}
+                        =t("fields.transfer.financial_quarter_and_year")
+                      %th.govuk-table__header{scope: "col"}
+                        =t("fields.transfer.receiving_organisation")
+                      %th.govuk-table__header{scope: "col"}
+                        =t("fields.transfer.destination")
+                      %th.govuk-table__header{scope: "col"}
+                        =t("fields.transfer.transfer_amount")
+                      %th.govuk-table__header{scope: "col"}
+                  %tbody.govuk-table__body
+                    - @transfers.each do |transfer|
+                      %tr.govuk-table__row
+                        %td.govuk-table__cell= transfer.financial_quarter_and_year
+                        %td.govuk-table__cell= transfer.destination.organisation.name
+                        %td.govuk-table__cell= transfer.destination.roda_identifier
+                        %td.govuk-table__cell= transfer.value
+                        %td.govuk-table__cell= link_to "Edit", edit_activity_transfer_path(@activity.id, transfer.id)
+
+
