Change submitted email body based on user type
The submitted email will have different bodies based on whether the user is a
delivery partner for the report's organisation, or a service owner.

Rather than have two mailers for each different user type, we have one mailer that
has different content  for each user type.

If, for some reason, the user doesn't belong in either of those  groups, we raise an
error. As we send email asynchronously, this won't effect the experience in the
frontend, but we will be alerted via Rollbar.

--- a/app/views/report_mailer/submitted.text.erb
+++ b/app/views/report_mailer/submitted.text.erb
@@ -1,15 +1,4 @@
-BEIS have received your report.
-
-* Report: <%= @report_presenter.email_title %>
-* Link to report: <%= report_url(@report_presenter) %>
-
-# What happens next?
-
-BEIS will review the data you have submitted and contact you with any questions or requests for changes.
-
-Review and final approval normally takes 3 to 4 weeks.
-
-We will send another confirmation when your report is approved.
+<%= render partial: "submitted_#{@role}" %>
 
 # Help and support
 
