Add a mailer action for when a report is approved

--- a/app/views/report_mailer/activated.text.erb
+++ b/app/views/report_mailer/activated.text.erb
@@ -10,14 +10,7 @@ Now the report is active you can access the report and update your data.
 
 You will need to provide your data and submit the report to BEIS before the reporting deadline of <%= @report_presenter.deadline %>.
 
-# Help and support
+<%= render partial: "footer" %>
 
-If you need assistance please contact RODA support at:
-
-RODAsupport@odamanagement.org
-
-Or visit the BEIS ODA Help centre:
-
-https://beisodahelp.zendesk.com
 
 
