--- a/app/views/report_mailer/submitted.text.erb
+++ b/app/views/report_mailer/submitted.text.erb
@@ -1,11 +1,3 @@
 <%= render partial: "submitted_#{@role}" %>
 
-# Help and support
-
-If you need assistance please contact RODA support at:
-
-RODAsupport@odamanagement.org
-
-Or visit the BEIS ODA Help centre:
-
-https://beisodahelp.zendesk.com
+<%= render partial: "footer" %>
