--- a/app/views/staff/shared/activities/_activity.html.haml
+++ b/app/views/staff/shared/activities/_activity.html.haml
@@ -83,7 +83,7 @@
     %dt.govuk-summary-list__key
       = t("summary.label.activity.sector", level: activity_presenter.level)
     %dd.govuk-summary-list__value
-      = activity_presenter.sector
+      = activity_presenter.sector_with_code
     %dd.govuk-summary-list__actions
       - if policy(activity_presenter).update? && step_is_complete_or_next?(activity: activity_presenter, step: :sector)
         = a11y_action_link(t("default.link.#{activity_presenter.call_to_action(:sector)}"), activity_step_path(activity_presenter, :sector_category), t("summary.label.activity.sector"))
