Prevent creating projects without a parent
Similar to the previous commit, only we're removing the ability to
choose "Project (Level C)" from the "level" form step.

This means that for delivery partner users, the level form step will no
longer contain *any* radio buttons, making it impossible to proceed.
This seems fine, since we'll shortly be removing this path altogether.

When rewriting the button code in the `_projects.html.haml` partial to
use `ActivityChildrenController#create`, I noticed that it was using the
current user's organisation, rather than the delivery partner's. This
risked the child activity being assigned to BEIS if a BEIS user somehow
accessed this page.

It makes sense to standardise on `extending_organisation`, as
`organisation` can be inferred using this and `level`, and I'd like to
remove one of them, to prevent duplication.

--- a/app/views/staff/shared/activities/_projects.html.haml
+++ b/app/views/staff/shared/activities/_projects.html.haml
@@ -3,6 +3,6 @@
     %h2.govuk-heading-m
       = t("page_content.activity.projects")
     - if policy(:project).create?
-      = form_tag(organisation_activities_path(current_user.organisation), method: "post") do
+      = form_tag(organisation_activity_children_path(activity.extending_organisation, activity), method: "post") do
         = submit_tag t("page_content.organisation.button.create_activity"), class: "govuk-button"
     = render partial: '/staff/shared/projects/table', locals: { projects: activities }
