--- a/app/views/staff/organisations/show.html.haml
+++ b/app/views/staff/organisations/show.html.haml
@@ -15,9 +15,9 @@
           = t("create_programme", scope: "page_content.organisation")
 
         - @funds.each do |fund|
-          = link_to t("form.button.activity.new_child", name: fund.title),
-            organisation_activity_children_path(@organisation_presenter, fund.id),
-            method: :post, class: "govuk-button govuk-!-margin-right-4"
+          = button_to t("form.button.activity.new_child", name: fund.title),
+              organisation_activity_children_path(@organisation_presenter, fund),
+              class: "govuk-button govuk-!-margin-right-4"
 
   - if policy(@organisation_presenter).download? && @organisation_funds.any?
     .govuk-grid-row
