Add supporting hint text to title and description
There are limits on the length of the title and description when the
data is published to the Statistics in International Development. If
the length goes over the limit it will be truncated. For now we just
advise the user that will happen.

--- a/app/views/staff/activity_forms/purpose.html.haml
+++ b/app/views/staff/activity_forms/purpose.html.haml
@@ -4,4 +4,7 @@
       label: { text: t("form.label.activity.title", level: custom_capitalisation(t("page_content.activity.level.#{f.object.level}"))) },
       hint: { text: t("form.hint.activity.title", level: t("page_content.activity.level.#{f.object.level}")) }
 
-    = f.govuk_text_area :description, rows: 5
+    = f.govuk_text_area :description,
+                        rows: 5,
+                        hint: { text: t("form.hint.activity.description") }
+
