Group activities by programme
Grouping the activities by parent allows users to more easily find the
activity they are looking for in a list.

Grouping by programme means that BEIS users would lose out on the
ability to view "fund" level activities. As a compromise I decided to
make the fund heading a link that will link to the fund details page.

We get some Bullet warnings to avoid eager loading but I think these
are just instances where we don't need to load children, ie. a programme
without any projects related to it.

--- a/app/views/staff/activities/index.html.haml
+++ b/app/views/staff/activities/index.html.haml
@@ -7,8 +7,8 @@
         = t("page_title.activity.index")
 
   - if current_user.service_owner?
-    = render partial: "staff/shared/activities/filter", locals: { organisation_id: @organisation_id }
+    = render partial: "staff/shared/activities/filter", locals: { organisation_id: @organisation.id }
 
   .govuk-grid-row.activity-page
     .govuk-grid-column-full
-      = render partial: "staff/shared/activities/table", locals: { activities: @activity_presenters }
+      = render partial: "staff/shared/activities/table", locals: { activities: @grouped_programmes }
